--- a/src/View/base.twig
+++ b/src/View/base.twig
@@ -11,7 +11,7 @@
 	<meta name="robots" content="noindex, nofollow" />
 
 	<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css" />
-	<script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="./vendor/bootstrap/dist/js/bootstrap.js"></script>
 
 	<title>{% if pagetitle %}{{ pagetitle }} &mdash; {% endif %} PAE EM4</title>
 
