--- a/src/View/base.twig
+++ b/src/View/base.twig
@@ -10,9 +10,15 @@
 	<meta name="keywords" content="Crowd Funding Mashup, Kickstarter, Indiegogo, PAE, EM4" />
 	<meta name="robots" content="noindex, nofollow" />
 
+	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css" />
+	<!-- Font Awesome -->
 	<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css" />
+
+	<!-- Bootstrap core JS -->
 	<script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
+
+	{% block stylesheet %} <!-- custom css stylesheet for page --> {% endblock %}
 
 	<title>{% if pagetitle %}{{ pagetitle }} &mdash; {% endif %} PAE EM4</title>
 
