--- a/src/View/base.twig
+++ b/src/View/base.twig
@@ -15,10 +15,14 @@
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css" />
 
-	<!-- Bootstrap core JS -->
-	<script src="vendor/bootstrap/js/bootstrap.js"></script>
+	<!-- custom stylesheet for base.twig -->
+	<link rel="stylesheet" href="css/base.css" />
+	<!-- custom css stylesheet for page -->
+    {% block customStylesheet %} <!-- specified in extends --> {% endblock %}
 
-	{% block stylesheet %} <!-- custom css stylesheet for page --> {% endblock %}
+	<!-- Bootstrap core JS and jQuery (dependency) -->
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.js"></script>
 
 	<title>{% if pagetitle %}{{ pagetitle }} &mdash; {% endif %} PAE EM4</title>
 
@@ -26,12 +30,41 @@
 
 <body class="light">
 {% block body %}
-	<div class="container main">
+
+    {% block navbar %}
+		<!-- company name brand -- ToDo: evtl. add image -->
+		<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+			<a class="navbar-brand" href="#">
+				Crowd Funding Mashup
+			</a>
+			<ul class="nav navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Dummy Link</a>
+				</li>
+			</ul>
+
+			<!-- quick search function (placed on the right) -->
+			<form class="form-inline float-lg-right">
+				<div class="input-group">
+					<span class="input-group-btn">
+						<button class="btn btn-outline-info" type="submit">
+							<i class="fa fa-search" aria-hidden="true"></i>
+						</button>
+					</span>
+					<input class="form-control form-dark form-group-outline-btn-info" type="text" placeholder="Search for project...">
+				</div>
+				<button class="btn btn-outline-info" type="submit">Go!</button>
+			</form>
+		</nav>
+    {% endblock %}
+
+	<div class="container-fluid">
 		<main role="main">
 			{% block content %}
 			{% endblock %}
 		</main>
 	</div>
+
 {% endblock %}
 </body>
 </html>
