--- a/htdocs/css/base.css
+++ b/htdocs/css/base.css
@@ -7,9 +7,11 @@ body {
 .form-control.form-dark {
     background-color: rgba(255,255,255,0.1);
     border-color: grey;
+    color: white;
 }
 
 /* adjust border color to adjoining button */
 .form-control.form-dark.form-group-outline-btn-info {
     border-color: #5bc0de;
+    color: #5bc0de;
 }
