--- a/src/View/base.twig
+++ b/src/View/base.twig
@@ -32,8 +32,9 @@
 {% block body %}
 
     {% block navbar %}
-		<!-- company name brand -- ToDo: evtl. add image -->
-		<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+		<!-- generic dark navbar -->
+		<nav role="navigation" class="navbar navbar-fixed-top navbar-dark bg-inverse">
+			<!-- company name brand -- ToDo: evtl. add image -->
 			<a class="navbar-brand" href="#">
 				Crowd Funding Mashup
 			</a>
