--- a/htdocs/css/base.css
+++ b/htdocs/css/base.css
@@ -15,3 +15,13 @@ body {
     border-color: #5bc0de;
     color: #5bc0de;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+}
