--- a/src/View/base.twig
+++ b/src/View/base.twig
@@ -32,39 +32,50 @@
 {% block body %}
 
     {% block navbar %}
-		<!-- generic dark navbar -->
-		<nav role="navigation" class="navbar navbar-fixed-top navbar-dark bg-inverse">
-			<!-- company name brand -- ToDo: evtl. add image -->
-			<a class="navbar-brand" href="#">
-				Crowd Funding Mashup
-			</a>
-			<ul class="nav navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="#">Dummy Link</a>
-				</li>
-			</ul>
+	<!-- generic dark navbar -->
+	<nav role="navigation" class="navbar navbar-fixed-top navbar-dark bg-inverse">
+		<!-- company name brand -- ToDo: evtl. add image -->
+		<a class="navbar-brand" href="#">
+			Crowd Funding Mashup
+		</a>
+		<ul class="nav navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" href="#">Dummy Link</a>
+			</li>
+		</ul>
 
-			<!-- quick search function (placed on the right) -->
-			<form class="form-inline float-lg-right">
-				<div class="input-group">
-					<span class="input-group-btn">
-						<button class="btn btn-outline-info" type="submit">
-							<i class="fa fa-search" aria-hidden="true"></i>
-						</button>
-					</span>
-					<input class="form-control form-dark form-group-outline-btn-info" type="text" placeholder="Search for project...">
-				</div>
-				<button class="btn btn-outline-info" type="submit">Go!</button>
-			</form>
-		</nav>
+		<!-- quick search function (placed on the right) -->
+		<form class="form-inline float-lg-right">
+			<div class="input-group">
+				<span class="input-group-btn">
+					<button class="btn btn-outline-info" type="submit">
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</button>
+				</span>
+				<input class="form-control form-dark form-group-outline-btn-info" type="text" placeholder="Search for project...">
+			</div>
+			<button class="btn btn-outline-info" type="submit">Go!</button>
+		</form>
+	</nav>
     {% endblock %}
 
 	<div class="container-fluid">
 		<main role="main">
 			{% block content %}
+				<!-- specific content for child pages -->
 			{% endblock %}
 		</main>
 	</div>
+
+	{% block footer %}
+	<footer class="footer">
+		<div class="container">
+			<span class="text-muted">
+				Made with <i class="fa fa-heart-o" aria-hidden="true" style="color: hotpink;"></i> by emilymaitan.
+			</span>
+		</div>
+	</footer>
+	{% endblock %}
 
 {% endblock %}
 </body>
