--- a/htdocs/css/base.css
+++ b/htdocs/css/base.css
@@ -17,11 +17,15 @@ body {
 }
 
 .footer {
-    position: absolute;
+    /* footer fix: place it on the very bottom! (not absolute!) */
+    position: relative;
     bottom: 0;
+    /* move a distance from the above content */
+    margin-top: 1em;
+    /* span over the entire width of the page */
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 60px;
     background-color: #f5f5f5;
 }
