--- a/src/View/base.twig
+++ b/src/View/base.twig
@@ -22,7 +22,9 @@
 
 	<!-- Bootstrap core JS and jQuery (dependency) -->
 	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/bootstrap/js/tether.min.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.js"></script>
+    {% block customScript %} {% endblock %}
 
 	<title>{% if pagetitle %}{{ pagetitle }} &mdash; {% endif %} PAE EM4</title>
 
