--- a/src/View/base.twig
+++ b/src/View/base.twig
@@ -37,7 +37,7 @@
 	<!-- generic dark navbar -->
 	<nav role="navigation" class="navbar navbar-fixed-top navbar-dark bg-inverse">
 		<!-- company name brand -- ToDo: evtl. add image -->
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="/">
 			Crowd Funding Mashup
 		</a>
 		<ul class="nav navbar-nav">
