--- a/src/View/HomepageController/homepage.twig
+++ b/src/View/HomepageController/homepage.twig
@@ -66,8 +66,9 @@
 
         <div class="col-lg-4">
             <p>Browse our project database by day...</p>
+            <!-- this whole datepicker stuff feels dirty -->
             <div id="datepicker">
-                <form id="dateform" name="dateform" method="get" action="/searchbydate">
+                <form id="dateform" name="dateform" method="get" action="/projectsByDate">
                     <input type="hidden" id="filterDate" value="">
                 </form>
             </div>
