fixed footer for pages with few content

--- a/htdocs/css/base.css
+++ b/htdocs/css/base.css
@@ -17,8 +17,8 @@ body {
 }
 
 .footer {
-    /* footer fix: place it on the very bottom! (not absolute!) */
-    position: relative;
+    /* footer fix: place it on the very bottom! (not absolute or relative!) */
+    position: fixed;
     bottom: 0;
     /* move a distance from the above content */
     margin-top: 1em;
