--- a/src/View/base.twig
+++ b/src/View/base.twig
@@ -11,19 +11,19 @@
 	<meta name="robots" content="noindex, nofollow" />
 
 	<!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css" />
+	<link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css" />
 	<!-- Font Awesome -->
-	<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css" />
+	<link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.css" />
 
 	<!-- custom stylesheet for base.twig -->
-	<link rel="stylesheet" href="css/base.css" />
+	<link rel="stylesheet" href="/css/base.css" />
 	<!-- custom css stylesheet for page -->
     {% block customStylesheet %} <!-- specified in extends --> {% endblock %}
 
 	<!-- Bootstrap core JS and jQuery (dependency) -->
-	<script src="vendor/jquery/jquery.min.js"></script>
-	<script src="vendor/bootstrap/js/tether.min.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.js"></script>
+	<script src="/vendor/jquery/jquery.min.js"></script>
+	<script src="/vendor/bootstrap/js/tether.min.js"></script>
+	<script src="/vendor/bootstrap/js/bootstrap.js"></script>
     {% block customScript %} {% endblock %}
 
 	<title>{% if pagetitle %}{{ pagetitle }} &mdash; {% endif %} PAE EM4</title>
