homepage link fix just to be sure

--- a/src/View/HomepageController/homepage.twig
+++ b/src/View/HomepageController/homepage.twig
@@ -2,12 +2,12 @@
 
 {% block customStylesheet %}
     <!-- jquery UI for displaying datepicker -->
-    <link rel="stylesheet" href="vendor/jquery-ui-custom/jquery-ui.css">
+    <link rel="stylesheet" href="/vendor/jquery-ui-custom/jquery-ui.css">
 {% endblock %}
 
 {% block customScript %}
-    <script src="vendor/jquery-ui-custom/jquery-ui.js"></script>
-    <script src="js/homepage.js"></script>
+    <script src="/vendor/jquery-ui-custom/jquery-ui.js"></script>
+    <script src="/js/homepage.js"></script>
 {% endblock %}
 
 {% block content %}
