--- a/src/View/HomepageController/homepage.twig
+++ b/src/View/HomepageController/homepage.twig
@@ -40,7 +40,7 @@
                 </div>
             {% else %}
 
-            <table class="table">
+            <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>Project Name</th>
