--- a/src/View/HomepageController/homepage.twig
+++ b/src/View/HomepageController/homepage.twig
@@ -51,7 +51,7 @@
                 </thead>
                 <tbody>
                 {% for project in projects_today %}
-                    <tr>
+                    <tr class="row-link" data-href="/project/{{ project.getName() }}">
                         <td>{{ project.getName() }}</td>
                         <td>{{ project.getDescription() }}</td>
                         <td>{{ project.getNoveltyIndex() }}</td>
