--- a/src/View/HomepageController/homepage.twig
+++ b/src/View/HomepageController/homepage.twig
@@ -51,7 +51,8 @@
                 </thead>
                 <tbody>
                 {% for project in projects_today %}
-                    <tr class="row-link" data-href="/project/{{ project.getName()|url_encode }}">
+                    <tr class="row-link"
+                        data-href="/project/{{ project.date|date('Y/m/d') }}/{{ project.getName()|url_encode }}__{{ project.id }}">
                         <td>{{ project.getName() }}</td>
                         <td>{{ project.getDescription() }}</td>
                         <td>{{ project.getNoveltyIndex() }}</td>
