add search functionality to project
... and stealthily fixed a bunch of minor other things =^^=

--- a/src/View/HomepageController/homepage.twig
+++ b/src/View/HomepageController/homepage.twig
@@ -52,7 +52,7 @@
                 <tbody>
                 {% for project in projects_today %}
                     <tr class="row-link"
-                        data-href="/project/{{ project.date|date('Y/m/d') }}/{{ project.getName()|url_encode }}__{{ project.id }}">
+                        data-href="/project/{{ project.id }}/{{ project.name|url_encode }}">
                         <td>{{ project.getName() }}</td>
                         <td>{{ project.getDescription() }}</td>
                         <td>{{ project.getNoveltyIndex() }}</td>
