--- a/src/View/base.twig
+++ b/src/View/base.twig
@@ -45,6 +45,9 @@
 				<a title="Homepage - New Projects of the Day" class="nav-link" href="/#newtoday">New Today</a>
 			</li>
 			<li class="nav-item">
+				<a title="Advanced Search" class="nav-link" href="/search/advanced">Advanced Search</a>
+			</li>
+			<li class="nav-item">
 				<a title="dummy" class="nav-link" href="#">Dummy Link</a>
 			</li>
 		</ul>
