update homepage variable

--- a/src/View/HomepageController/homepage.twig
+++ b/src/View/HomepageController/homepage.twig
@@ -19,7 +19,7 @@
             <tbody>
                 <tr>
                     <th scope="row">API Status</th>
-                    <td>{{ stats_api_connected }}</td>
+                    <td>{{ stats_api_status }}</td>
                 </tr>
                 <tr>
                     <th scope="row">Entries in Database</th>
