--- a/src/View/SearchController/searchByDate.twig
+++ b/src/View/SearchController/searchByDate.twig
@@ -1,6 +1,7 @@
 {% extends "base.twig" %}
 
 {% block customScript %}
+    <script src="/vendor/jquery-ui-custom/jquery-ui.js"></script>
     <script src="/js/search.js"></script>
 {% endblock %}
 
