that huge twitter push, comes with bugfix
don't blame me for this terrible rushed code, I am tired and need to study for an exam

--- a/src/View/ProjectController/project.twig
+++ b/src/View/ProjectController/project.twig
@@ -50,7 +50,16 @@
                 </div>
             </a>
             <div id="tweets" class="collapse card-block">
-                HERE BE TWEETS
+                {% if tweets|length == 0 %}
+                    <div class="alert alert-info" role="alert">
+                        <strong>Sorry!</strong> Seems like there are no tweets for this project.
+                        This is your chance to be the first one to tweet about it!
+                    </div>
+                {% else %}
+                   {% for tweet in tweets %}
+                       {{ tweet.getHtml()|raw }}
+                   {% endfor %}
+                {% endif %}
             </div>
         </div>
 
